jena-shex/src/test/files/spec/negativeSyntax/shapename-literal.shex
# literal shape label
# source: turtle-syntax-bad-struct-04.ttl
"IssueShape" {
   <http://a.example/p1> .
}
